crates/strider-analyze/tests/snapshots/v3__x86__builtins__expect_branch.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "8" -> "5" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "10" [label="init\nXMM0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="init\nST0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="init\nEDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "11" -> "7" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "12" -> "7" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "11" [label="arg[0] ← ram[sp + 4]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v2" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "14" -> "13" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "14" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "13" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "9" -> "13" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "10" -> "13" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "4" [label="And:bool", shape=box, fillcolor="#2d2d2d"];
  "15" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "16" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "16" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "17" -> "16" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "18" -> "16" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "18" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "19" -> "18" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "19" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "20" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "21" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "20" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "11" -> "20" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "20" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0xffffff9c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "23" -> "17" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "23" [label="Sborrow\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "11" -> "23" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "24" -> "23" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0x64:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "15" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "25" -> "15" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "25" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "20" -> "25" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "25" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
